# zyma

./: .geminiignore  .gitignore  CHANGELOG.md  LICENSE-APACHE  LICENSE-MIT  README.md  README_EN.md  update.json
.github/workflows/: gitee-mirror.yml  release.yml
docs/: INDEX.md  fake_plugin_architecture_spec_llm_ready.md
docs/api/: backend_commands.md
docs/core/: architecture.md
docs/design/: core_architecture_v2.md  plugin_api_reference.md  功能清单.md  插件系统设计.md
docs/extensions/: agent_integration.md
docs/经验/: tauri_control_window.md  tauri_window_control.md
zyma/: package-lock.json  package.json
zyma/docs/design/: plugin_api_reference.md
zyma/plugins/hello-zyma/: index.js  manifest.json
zyma/plugins/zyma-dev-helper/: index.js  manifest.json
zyma/plugins/zyma-plugin-ai-chat/: index.js  manifest.json
zyma/plugins/zyma-plugin-dev/: index.js  manifest.json
zyma/src-tauri/: Cargo.toml  tauri.conf.json
zyma/src-tauri/capabilities/: default.json
zyma/src-tauri/icons/: icon.icns
zyma/src-tauri/permissions/: base.json
zyma/src-tauri/src/: bus.rs  lib.rs  main.rs  models.rs
zyma/src-tauri/src/commands/: config.rs  context.rs  fs.rs  llm.rs  mod.rs  output.rs  plugins.rs  search.rs  system.rs  watcher.rs  window.rs
zyma/src-tauri/src/llm/: manager.rs  mod.rs  sse.rs  types.rs
zyma/src-tauri/src/services/: context.rs  mod.rs  vfs.rs
zyma/ui/: package-lock.json  package.json  vite.config.ts
zyma/ui/src/: App.css  App.tsx  config.ts  index.css  index.ts  main.tsx
zyma/ui/src/commands/: file.ts  view.ts  workspace.ts
zyma/ui/src/components/: ActivityBar.tsx  ErrorBoundary.tsx  ResizeHandle.css  StatusBar.tsx
zyma/ui/src/core/: SlotRegistry.ts  WorkbenchContext.tsx  WorkbenchMain.tsx  WorkbenchModals.tsx  ZymaApp.tsx  workbench.tsx  workbenchInit.tsx
zyma/ui/src/hooks/: useAppInitialization.ts  useAppInitialization.tsx  useChatLogic.ts  useFileIO.ts  (+10 more)
(+58 files in other folders)
