[package]
name = "zyma"
version = "0.9.6"
description = "ZymaPad"
authors = ["Zyma Contributors"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "zyma_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2.6.0"
walkdir = "2.5.0"
winreg = "0.55.0"
winapi = { version = "0.3.9", features = ["processthreadsapi", "securitybaseapi", "winnt"] }
tauri-plugin-single-instance = "2.3.7"
tauri-plugin-shell = "2.3.4"
tauri-plugin-updater = "2"
tauri-plugin-cli = "2"
tokio = { version = "1", features = ["full"] }
ignore = "0.4"
num_cpus = "1.16"
regex = "1.10"
notify = "6.1.1"
globset = "0.4"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
futures = "0.3"
bytes = "1.0"
async-trait = "0.1"
encoding_rs = "0.8"
chardetng = "0.1"
